[FIX] web: allow alt-click behind dialog overlay
Issue: when displaying the shortcuts with ALT key, when a dialog is open
the shortcuts are displayed in absolute position above the gray overlay
of the dialog, so it is possible to click on the buttons of the
shortcuts.
This fix will remove this possibility.

--- a/addons/web/static/src/less/webclient.less
+++ b/addons/web/static/src/less/webclient.less
@@ -136,7 +136,6 @@ div.o_boolean_toggle {
     height: 100%;
     left: 0;
     top: 0;
-    z-index: 1000000;
     background-color: rgba(0,0,0,.6);
     color: #FFFFFF;
     justify-content: center;
